Fix operations border issue on Firefox (fix #725)

--- a/client/themes/default/style.css
+++ b/client/themes/default/style.css
@@ -598,13 +598,16 @@ form.search p.search-buttons button:last-child {
 
 /*
 * WebKit hack: by setting a relative position to the cell, its width will not be
-* calculated according to its content, which is wrong if the content is too wide
+* calculated according to its content, which is wrong if the content is too
+* wide. The background-clip tells Firefox to draw the border on top of then
+* background.
 */
 @media screen and (max-width: 768px) {
     /* The height is smaller in xs-mode */
     .operation-panel .table td {
         position: relative;
         height: 41px;
+        background-clip: padding-box;
     }
 
     /* Force the max height of the children to ensure a fixed height for the
@@ -624,6 +627,7 @@ form.search p.search-buttons button:last-child {
     .operation-panel .table td {
         position: relative;
         height: 54px;
+        background-clip: padding-box;
     }
 
     /* Force the max height of the children to ensure a fixed height for the
